--- a/src/css/midi-interface.css
+++ b/src/css/midi-interface.css
@@ -67,6 +67,16 @@
   background: var(--dark-active);
 }
 
+.midi-interface .chord-search label:hover,
+.midi-interface .chord-search button:hover {
+  background: var(--btn-light-grey);
+}
+
+.midi-interface .chord-search label.active,
+.midi-interface .chord-search button.active {
+  background: var(--dark-active);
+}
+
 .midi-interface .chordfinder p span {
   color: var(--dark-active);
 }
@@ -97,6 +107,16 @@
 }
 
 .midi-interface.light .options .options-cat.options-modal .modal-row label.active {
+  background: var(--light-active);
+}
+
+.midi-interface.light .chord-search label:hover,
+.midi-interface.light .chord-search button:hover {
+  background: var(--btn-light-grey);
+}
+
+.midi-interface.light .chord-search label.active,
+.midi-interface.light .chord-search button.active {
   background: var(--light-active);
 }
 
@@ -491,6 +511,46 @@
   display: block;
 }
 
+.midi-interface .linn .linn-btn.btn-chord-0 {
+  background: var(--button-active-dark);
+}
+
+.midi-interface .linn .linn-btn.btn-chord-1 {
+  background: var(--button-active-dark);
+  -webkit-filter: brightness(0.8);
+          filter: brightness(0.8);
+}
+
+.midi-interface .linn .linn-btn.btn-chord-2 {
+  background: var(--button-active-dark);
+  -webkit-filter: brightness(0.6);
+          filter: brightness(0.6);
+}
+
+.midi-interface .linn .linn-btn.btn-chord-3 {
+  background: var(--button-active-dark);
+  -webkit-filter: brightness(0.4);
+          filter: brightness(0.4);
+}
+
+.midi-interface .linn .linn-btn.btn-chord-4 {
+  background: var(--button-active-dark);
+  -webkit-filter: brightness(0.35);
+          filter: brightness(0.35);
+}
+
+.midi-interface .linn .linn-btn.btn-chord-5 {
+  background: var(--button-active-dark);
+  -webkit-filter: brightness(0.3);
+          filter: brightness(0.3);
+}
+
+.midi-interface .linn .linn-btn.btn-chord-6 {
+  background: var(--button-active-dark);
+  -webkit-filter: brightness(0.25);
+          filter: brightness(0.25);
+}
+
 .midi-interface .linn .linn-btn.show-channels .btn-channel {
   padding: 2px 4px;
   position: absolute;
@@ -628,6 +688,55 @@
   fill: var(--light-font);
 }
 
+.midi-interface .chord-search {
+  padding: 0 0 32px;
+}
+
+.midi-interface .chord-search .search-row {
+  margin: 0 0 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.midi-interface .chord-search label {
+  padding: 4px 8px;
+  margin: 0 4px 4px 0;
+  background: var(--btn-grey);
+  font-size: 1.125em;
+  letter-spacing: 1px;
+  color: #333;
+  position: relative;
+  cursor: pointer;
+}
+
+.midi-interface .chord-search label.disabled {
+  opacity: 0.5;
+  cursor: default;
+}
+
+.midi-interface .chord-search label input {
+  width: 0;
+  height: 0;
+  opacity: 0;
+  position: absolute;
+}
+
+.midi-interface .chord-search button {
+  padding: 4px 8px;
+  margin: 0 4px 4px 0;
+  background: var(--btn-grey);
+  border: none;
+  outline: transparent;
+  font-family: inherit;
+  font-size: 1.125em;
+  letter-spacing: 1px;
+  color: #333;
+  cursor: pointer;
+}
+
 .midi-interface .status-info {
   height: 50px;
   display: -webkit-box;
@@ -682,10 +791,12 @@
 }
 
 .midi-interface .midi h4 {
+  margin-top: 0;
   padding-right: 16px;
 }
 
 .midi-interface .midi p {
+  margin-top: 0;
   font-size: 14px;
 }
 
